--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -260,9 +260,6 @@
                                             <constraint firstAttribute="trailing" secondItem="4Ci-vm-Cd1" secondAttribute="trailing" id="hqR-f6-Mx9"/>
                                             <constraint firstItem="4Ci-vm-Cd1" firstAttribute="leading" secondItem="L0M-Io-Oh2" secondAttribute="leading" id="xex-AV-wcQ"/>
                                         </constraints>
-                                        <connections>
-                                            <outlet property="dateLabel" destination="4Ci-vm-Cd1" id="aHN-qS-nzN"/>
-                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -299,13 +296,60 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="competitiveEventsCell" rowHeight="73" id="A23-ST-qIZ">
-                                <rect key="frame" x="0.0" y="84" width="375" height="73"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="competitiveEventsCell" rowHeight="76" id="A23-ST-qIZ" customClass="CompetitiveEventsCell" customModule="Leader" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="84" width="375" height="76"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="A23-ST-qIZ" id="6Gg-OW-reW">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="72.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3b-qe-4PL">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="35" id="G1a-B4-Mx9"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XVJ-Cx-l71">
+                                            <rect key="frame" x="15" y="55" width="360" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="z1O-kL-m6y"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.49000471703886039" green="0.49000471703886039" blue="0.49000471703886039" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="highlightedColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbx-rH-MBe">
+                                            <rect key="frame" x="15" y="35" width="360" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="BSS-TE-d0s"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.49000471703886039" green="0.49000471703886039" blue="0.49000471703886039" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="highlightedColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Sbx-rH-MBe" firstAttribute="leading" secondItem="6Gg-OW-reW" secondAttribute="leading" constant="15" id="1Gp-m9-RTb"/>
+                                        <constraint firstItem="XVJ-Cx-l71" firstAttribute="leading" secondItem="6Gg-OW-reW" secondAttribute="leading" constant="15" id="1NU-N5-LjP"/>
+                                        <constraint firstItem="Sbx-rH-MBe" firstAttribute="top" secondItem="e3b-qe-4PL" secondAttribute="bottom" id="2y5-c5-NDI"/>
+                                        <constraint firstAttribute="trailing" secondItem="XVJ-Cx-l71" secondAttribute="trailing" id="7MB-ZH-7fR"/>
+                                        <constraint firstItem="XVJ-Cx-l71" firstAttribute="top" secondItem="Sbx-rH-MBe" secondAttribute="bottom" id="7tO-sW-62t"/>
+                                        <constraint firstItem="Sbx-rH-MBe" firstAttribute="top" secondItem="e3b-qe-4PL" secondAttribute="bottom" id="CQY-Ne-wRN"/>
+                                        <constraint firstAttribute="trailing" secondItem="e3b-qe-4PL" secondAttribute="trailing" id="GIe-It-Lio"/>
+                                        <constraint firstItem="e3b-qe-4PL" firstAttribute="leading" secondItem="6Gg-OW-reW" secondAttribute="leading" id="NJr-dm-eJK"/>
+                                        <constraint firstAttribute="trailing" secondItem="Sbx-rH-MBe" secondAttribute="trailing" id="SOv-M8-xlu"/>
+                                        <constraint firstItem="e3b-qe-4PL" firstAttribute="top" secondItem="6Gg-OW-reW" secondAttribute="top" id="kxw-qd-Xlf"/>
+                                        <constraint firstItem="XVJ-Cx-l71" firstAttribute="top" secondItem="Sbx-rH-MBe" secondAttribute="bottom" id="qQV-WN-AuL"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="eventCategory" destination="Sbx-rH-MBe" id="O7O-Ou-1DU"/>
+                                    <outlet property="eventName" destination="e3b-qe-4PL" id="0i6-Lv-fVY"/>
+                                    <outlet property="eventType" destination="XVJ-Cx-l71" id="ED5-1D-4lv"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -314,6 +358,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="competitiveEventsTableView" destination="ddV-6t-igb" id="cI7-tg-U3l"/>
                         <outlet property="searchDisplayController" destination="h5u-gV-hkK" id="CuA-SB-l3p"/>
                     </connections>
                 </tableViewController>
@@ -329,6 +374,21 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2280.8000000000002" y="-363.86806596701655"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="gbz-FU-B27">
+            <objects>
+                <viewController id="1Qf-a5-BBj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cio-c2-SCn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="nGo-US-bhb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z7n-ct-rGt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2992.8000000000002" y="-384.55772113943033"/>
         </scene>
         <!--Welcome-->
         <scene sceneID="7AD-Qh-FQm">
@@ -726,9 +786,6 @@
                                 <state key="normal" title="Q&amp;AButton">
                                     <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <segue destination="6zP-ht-xuq" kind="show" id="pyl-zf-83h"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxA-Rc-Rlt">
                                 <rect key="frame" x="0.0" y="434" width="375" height="50"/>
